<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:weightSum="2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/whitebox">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="177dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/TextView_1"
                android:textSize="40sp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:src="@drawable/budget" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/TextView_2"
        android:textSize="27dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/whitebox"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/emi_liner"
            android:layout_width="85dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="86dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/finance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="EMI"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tax_liner"
            android:layout_width="85dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="86dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/tax" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Tax"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Currency"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:src="@drawable/exchange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:text="Currency Conversion" />

        </LinearLayout>

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextView_3"
            android:textSize="27sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:weightSum="3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/whitebox">

        <LinearLayout
            android:id="@+id/fd_liner"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="86dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/accounts"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FD
                Calclator"
                android:gravity="center"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rd_liner"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="86dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/accounts"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="RD
                Calculator"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ppf_liner"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="86dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/accounts"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PPF
                Calculator"
                android:gravity="center"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>